--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </section>
     <section class="pimg1">
         <div class="ptext">
-            <span class="textBg"> SYSTUMMMM </span>
+            <span class="textBg"> DO SOME CODING </span>
         </div>
     </section>
 </body>
